--- a/frontend/src/styles/postViewer.module.css
+++ b/frontend/src/styles/postViewer.module.css
@@ -18,6 +18,10 @@
     font-size: 1.05rem;
 }
 
+.viewer img {
+    max-width: 100% !important;
+    height: auto !important;
+}
 
 .headerBox {
     display: flex;
@@ -121,6 +125,7 @@
         gap: 1.5rem;
         align-items: center;
     }
+
     .interactiveImage {
         width: 35px;
         height: 35px;
@@ -150,6 +155,7 @@
         gap: 1rem;
         align-items: center;
     }
+
     .interactiveImage {
         width: 30px;
         height: 30px;
